fixes layout break

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -36,9 +36,8 @@ body {
   }
   .drag-area {
     border: 1px dashed #97bef4;
-    width: 338px;
+    width: 100%;
     height: 218.9px;
-    margin: 0 auto;
     background: #f6f8fb;
     display: flex;
     align-items: center;
@@ -46,12 +45,6 @@ body {
     justify-content: center;
     overflow: hidden;
     border-radius: 12px;
-
-    @media all and (max-width: 350px) {
-      & {
-        width: 100%;
-      }
-    }
   }
   h1 {
     color: #4f4f4f;
